--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,4 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 # folder yang tidak perlu di scan
-sonar.exclusions=coverage/**, node_module/**, testing/**
+sonar.exclusions=coverage/**, node_modules/**, testing/**
