--- a/apps/sonar-project.properties
+++ b/apps/sonar-project.properties
@@ -15,6 +15,6 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 # folder yang tidak perlu di scan
-sonar.exclusions=coverage/**, node_modules/**, testing/**
+sonar.exclusions=apps/coverage/**, apps/node_modules/**, apps/testing/**
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
